<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/mygroup"
        android:checkableBehavior="all">
        <item
            android:id="@+id/mnuItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:title="@string/check1" />
        <item
            android:id="@+id/mnuItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:title="@string/check2" />
    </group>
    <group
        android:id="@+id/mygroup2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mnuItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/opcion4" />
        <item
            android:id="@+id/mnuItem5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:title="@string/opcion5" />
        <item
            android:id="@+id/mnuItem6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/opcion6" />
    </group>
    <item
        android:id="@+id/mnuSubMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/submenu" >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/mnuSub1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/sub1" />
            <item
                android:id="@+id/mnuSub2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/sub2" />
        </menu>
    </item>
</menu>